# yao-open-tools

./: README.md
tools/: README.md
tools/TokDoc/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
tools/TokDoc/docs/: backend-development-plan.md  tokdoc-rename-plan.md
tools/TokDoc/public/: app.js  index-public.html  index.html  public-app.js
tools/TokDoc/src/: admin-path.js  config.js  db.js  edit-bridge.js  html.js  page-store.js  routes.js  server.js  watch-service.js
tools/TokDoc/test/: auth.test.js  (+4 more)
tools/TokHtml/: README.md
tools/live-quiz-interaction/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tools/tokchat/: .dockerignore  .env.docker.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  SERVER_DEPLOYMENT.md  admin.php  admin_login.php  api-stats.php  deploy.sh  docker-compose.yml  health.php  index.php  login.php  quick_start.sh  restart-server.sh  router.php  share.php  stop-server.sh
tools/tokkit/: README.md  README.zh-CN.md
tools/tokscai/: .gitignore  README.md  pyproject.toml
tools/tokscai/src/tokscai/: cli.py
tools/tokscai/tests/: test_cli.py
tools/tokscr/: README.md  background.js  capture-store.js  content.js  crop-utils.js  editor-utils.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  result.css  result.html  result.js
tools/toktra/: README.md
tools/tokurl/: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
(+113 files in other folders)
