[project]
name = "tokscai"
version = "0.1.0"
description = "Tiny CLI for categorized local memory usage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []
keywords = ["memory", "cli", "macos", "system", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]

[project.optional-dependencies]
test = []

[project.scripts]
tokscai = "tokscai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
